Fix accessibility issues, and a few content tweaks (#20)
* Fix accessibility issues, and a few content tweaks

Accessibility issues found via http://wave.webaim.org:

* Improved text contrast in several places
* Fixed some duplicate alt tags
* Fixed a heading hierarchy bug
* Labelled a form element

Other changes:

* Removed the color swatches, they were flagged for contrast and looked
  out of place to me. If these were supposed to be part of the press-
  kit stuff, we should either put them in those files, or add some text
  on the page explaining why they're there.
* Added a (temporary) link back to TheKinrar's instance wizard, to be
  removed once this one has feature parity (Since right now not having
  a link there looks like a regression of features from the user POV)

* Reinstate color swatches, move wizard button

--- a/src/scss/Credits.scss
+++ b/src/scss/Credits.scss
@@ -9,7 +9,7 @@
     font-size: 16px;
     line-height: 24px;
     margin-bottom: 20px;
-    color: $lighter;
+    color: $lightest;
   }
 
   p {
@@ -28,6 +28,9 @@
 
   .color-scheme {
     margin-top: 50px;
+  }
+
+  .color-swatch {
     padding: 10px;
     padding-top: 36px;
     border-radius: 4px;
