--- a/src/scss/Wizard.scss
+++ b/src/scss/Wizard.scss
@@ -9,7 +9,7 @@
     font-family: 'Montserrat', sans-serif;
     font-size: 21px;
     margin-bottom: 20px;
-    color: $lighter;
+    color: $lightest;
   }
 
   p {
@@ -142,7 +142,15 @@
 .wizard-controls {
   margin-bottom: 50px;
   display: flex;
-  justify-content: flex-end;
+
+  .cta.button {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  .spacer {
+    flex-grow: 1
+  }
 }
 
 .search__input {
@@ -151,7 +159,7 @@
   box-sizing: border-box;
   border-radius: 4px;
   display: block;
-  width: 100%;
+  min-width: 10em;
   border: none;
   padding: 10px;
   padding-right: 30px;
